--- a/dependencies/facebookads/AndroidManifest.xml
+++ b/dependencies/facebookads/AndroidManifest.xml
@@ -5,4 +5,9 @@
 
 	<uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+	<application>
+    	<activity android:name="com.facebook.ads.InterstitialAdActivity"
+                  android:configChanges="keyboardHidden|orientation|screenSize" />
+	</application>
 </manifest>
