--- a/dependencies/facebookads/build.gradle
+++ b/dependencies/facebookads/build.gradle
@@ -26,5 +26,5 @@ android {
 dependencies {
 	compile fileTree(dir: 'libs', include: '*.jar')
 	compile project(':deps:extension-api')
-	compile project(':deps:google-play-services')
+	compile 'com.android.support:support-v4:::SET_SUPPORT_LIBRARY_VERSION::'
 }
